<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nedim.contactlist.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llContactHeader"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/account"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorImage"
            android:id="@+id/imageView"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="John"/>

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@id/tvName"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="John"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llContactHeader"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lblEmail"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/emai_example"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_alignBaseline="@+id/lblEmail"
        android:layout_alignBottom="@+id/lblEmail"
        android:layout_toRightOf="@+id/lblEmail"
        android:layout_toEndOf="@+id/lblEmail" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblEmail"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lblPhone"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_example"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_alignBaseline="@+id/lblPhone"
        android:layout_alignBottom="@+id/lblPhone"
        android:layout_toRightOf="@+id/lblPhone"
        android:layout_toEndOf="@+id/lblPhone" />

</RelativeLayout>
